feat: add firstName, lastName to users schema
