# src/dtos/users.dto.ts
@@ -1,9 +1,16 @@
 import { IsEmail, IsString } from 'class-validator';
 
-export class CreateUserDto {
+export class UserSignInDto {
   @IsEmail()
   public email: string;
 
   @IsString()
   public password: string;
+}
+export class CreateUserDto extends UserSignInDto {
+  @IsString()
+  public firstName: string;
+
+  @IsString()
+  public lastName: string;
 }
