# src/models/users.model.ts
@@ -1,17 +1,38 @@
 import { model, Schema, Document } from 'mongoose';
 import { User } from '@interfaces/users.interface';
 
-const userSchema: Schema = new Schema({
-  email: {
-    type: String,
-    required: true,
-    unique: true,
+const userSchema: Schema = new Schema<User>(
+  {
+    firstName: {
+      type: String,
+      required: true,
+      unique: true,
+    },
+    lastName: {
+      type: String,
+      required: true,
+      unique: true,
+    },
+    email: {
+      type: String,
+      required: true,
+      unique: true,
+    },
+    password: {
+      type: String,
+      required: true,
+    },
   },
-  password: {
-    type: String,
-    required: true,
+  {
+    toJSON: {
+      virtuals: true,
+      transform: function (_, document) {
+        delete document.password;
+        delete document.__v;
+      },
+    },
   },
-});
+);
 
 const userModel = model<User & Document>('User', userSchema);
 
